--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -22,7 +22,7 @@ linters-settings:
     errorf: true
 
   gci:
-    local-prefixes: go.jlucktay.dev/template-go
+    local-prefixes: go.jlucktay.dev/go-pebkac
 
   goconst:
     min-len: 3
@@ -37,9 +37,6 @@ linters-settings:
 
   gofumpt:
     extra-rules: true
-
-  golint:
-    min-confidence: 0
 
   govet:
     check-shadowing: true
@@ -63,6 +60,9 @@ linters-settings:
     allow-leading-space: false
     require-explanation: true
     require-specific: true
+
+  revive:
+    min-confidence: 0
 
   unparam:
     check-exported: true
@@ -98,7 +98,6 @@ linters:
     - goerr113
     - gofmt
     - gofumpt
-    - golint
     - gosec
     - gosimple
     - govet
@@ -109,6 +108,7 @@ linters:
     - nlreturn
     - noctx
     - nolintlint
+    - revive
     - staticcheck
     - structcheck
     - stylecheck
